--- a/.env
+++ b/.env
@@ -19,6 +19,10 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 SEARCHAUTOMATIONAPI=https://api.getstarreach.com/webhook/f20100b2-c510-4c19-8e7b-dee50f3fc43e
 SEARCHAUTOMATIONAPISTATUS=https://api.getstarreach.com/webhook/933765e9-726f-4786-ae37-53ba4fc5fe34
 
+
+SAMPLESEARCHAUTOMATIONAPI=https://api.getstarreach.com/webhook/74758ce5-96ee-4034-a922-551a1101d9e0
+
+
 TWILIO_ACCOUNT_SID="SK2e4b44a538cec878a303993e4bf29fc6"
 TWILIO_AUTH_TOKEN="0PglJo6VXVTTsV6jVC0vuRrfMO1l0Pk6"
 
