--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "quick.db": "^9.1.7",
     "stripe": "^17.5.0",
     "twilio": "^5.3.2",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xlsx": "^0.18.5",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
