--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@prisma/client": "^6.11.1",
     "@supabase/supabase-js": "^2.45.1",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.11.0",
     "better-sqlite3": "^11.3.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
