Export and get apis

--- a/.env
+++ b/.env
@@ -46,6 +46,9 @@ RegistrationCredits=0
 
 Searchcredits=0
 
+# EXPORT_WEBHOOK_URL= http://localhost:5051/webhook
+EXPORT_WEBHOOK_URL= https://automations-api.8siuvc.easypanel.host/webhook/Searchleads_Apollo
+
 DNS="healdns"
 
 PORT=5051
