Added search credit corresponding to subscription credit

--- a/.env
+++ b/.env
@@ -38,6 +38,8 @@ UPSTASH_REDIS_REST_URL=https://merry-buzzard-23295.upstash.io
 UPSTASH_REDIS_REST_TOKEN=AVr_AAIjcDFlNjljYTlhNmVlZmY0ZjNhYTY4Mjc1MTc3MzRjYjVmNnAxMA
 UPSTASH_REDIS_TTL=3600 
 
+PERCENTAGE=10
+
 AccessKey=AKIA4MWTL4V44NPCKGHH
 
 SecretKey=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
