--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "better-sqlite3": "^11.3.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
