Added maintence api get and change or edit and create log and fixed env search and registration update issue

--- a/.env
+++ b/.env
@@ -46,6 +46,8 @@ SecretKey=f0NbAKjbApVz2MsQyQfmk9S6sNWE7fR1jiBb0TRp
 
 RegistrationCredits=0
 
+MaintenanceMode = false
+
 Searchcredits=0
 
 # EXPORT_WEBHOOK_URL= http://localhost:5051/webhook
